# price-sensitivities

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  elasticity_actions_feeluniquecom_default_0_2024-03-25T08:58:02.618360.txt  pipeline_requirements.txt  pyproject.toml  requirements.txt  test_job.ipynb  test_job_eu.ipynb  test_job_us.ipynb
.github/workflows/: python_ci_pipeline.yml
elasticity/: elasticity_plotter.py  mock_elasticity_generator.py  preprocessing.py
notebooks/: elasticity_run.ipynb
src/: elasticity_plotter.py  main.py  mock_elasticity_generator.py  modeling.py  plot_demands.py  preprocessing.py  requirements.txt
src/elasticity/data/: configurator.py  group.py  preprocessing.py  read.py  read_sensitivity.py  utils.py  utils_sensitivity.py
src/elasticity/model/: competitors.py  cross_validation.py  group.py  model.py  run_model.py  utils.py
src/elasticity/utils/: cli_default_args.py  consts.py  elasticity_action_list.py  elasticity_plotter.py  mock_elasticity_generator.py  plot_demands.py  utils.py  write.py  write_utils.py
src/ql_toolkit/application_state/: manager.py
src/ql_toolkit/arrow/: io.py  io_tools.py  s3io.py
src/ql_toolkit/attrs/: __init__.py  action_list.py  data_classes.py  write.py
src/ql_toolkit/config/: __init__.py  external_config.py  runtime_config.py  utils.py
src/ql_toolkit/data_lake/: athena_glue_operations.py  athena_query.py  data_classes.py
src/ql_toolkit/env_setup/: initialize_runtime.py
src/ql_toolkit/plotting/: utils.py
src/ql_toolkit/ql_toolkit/: __init__.py
src/ql_toolkit/results_persistence/: api_utils.py  db_client.py  pydantic_models.py
src/ql_toolkit/runtime_env/: setup.py
src/ql_toolkit/s3/: data_classes.py  io.py  io_tools.py  ls.py  ls_tools.py  pya.py  s3io.py  utils.py
src/report/: inventory.py  logging_error.py  report.py  sensitivity.py  write_graphs.py
tests/: conftest.py  test_data_utils.py  test_elasticity_plotter.py  test_mock_elasticity_generator.py  test_model.py  test_modeling.py  test_preprocessing.py  test_run_model.py  test_setup.py  test_utils_sensitivity.py  utils.py
(+50 files in other folders)
