[tool.poetry]
name = "elasticity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
s3fs = "^2024.2.0"
statsmodels = "^0.14.1"
pyarrow = "^15.0.0"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.test.dependencies]
black = "^24.2.0"
pylint = "^3.1.0"
ruff = "^0.2.2"
pyright = "^1.1.351"
bandit = "^1.7.7"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
jupyterlab = "^4.1.2"
ipywidgets = "^8.1.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
