[tool.poetry]
name = "elasticity"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.55"
s3fs = "^0.4.2"
joblib = "^1.3.2"
polars = "^0.20.13"
pyyaml = "^6.0.1"
statsmodels = "^0.14.1"
pyarrow = "^15.0.0"
scikit-learn = "^1.4.1.post1"
wheel = "^0.42.0"
numexpr = "^2.9.0"
bottleneck = "^1.3.8"
matplotlib = "^3.8.4"
pyathena = "^3.8.2"
pydantic = "^2.7.1"


[tool.poetry.group.test.dependencies]
black = "^24.2.0"
pylint = "^3.1.0"
ruff = "^0.2.2"
pyright = "^1.1.351"
bandit = "^1.7.7"
isort = "^5.13.2"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
jupyterlab = "^4.1.2"
ipywidgets = "^8.1.2"
seaborn = "^0.13.2"

[tool.poetry.group.sgmkr.dependencies]
sagemaker = "^2.213.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
